Removed form-horizontal class from some divs. Aligned ekm login text box. Fixed error messages

--- a/App/PluginWeb/EzBob.Web/Content/css/style.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/style.css
@@ -474,7 +474,6 @@ blockquote{margin:0 0 20px 0; padding:10px; border:1px #ccc solid; font-style:it
 }
 
 .simple-login .controls {
-    margin-left: 135px;
 }
 
 .simple-login .control-label{
